--- a/gearclient/package.json
+++ b/gearclient/package.json
@@ -38,11 +38,13 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.7.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-highcharts": "0.4.4",
     "ember-load-initializers": "^0.5.1",
     "ember-power-select": "1.0.0-beta.13",
     "ember-radio-button": "1.0.7",
     "ember-resolver": "^2.0.3",
     "ember-welcome-page": "^1.0.1",
+    "highcharts": "4.2.6",
     "loader.js": "^4.0.1"
   }
 }
