--- a/gearapi/Gemfile
+++ b/gearapi/Gemfile
@@ -22,6 +22,7 @@ gem 'puma', '~> 3.0'
 
 gem 'active_model_serializers', '~> 0.10.2'
 gem 'measured-rails'
+gem "ember-cli-rails", github: "thoughtbot/ember-cli-rails", branch: "support-api-controller"
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
