--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "bower": "*"
   },
   "cacheDirectories": [
-    "../gearclient/node_modules",
-    "../gearclient/bower_components",
+    "gearclient/node_modules",
+    "gearclient/bower_components",
     "node_modules"
   ]
 }
